# xone-tray

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  lefthook.yml
.github/workflows/: ci.yml  release.yml
flatpak/: summary  summary.idx
flatpak/refs/heads/app/io.github.savagecore.XoneTray/x86_64/: master
flatpak/refs/heads/runtime/io.github.savagecore.XoneTray.Debug/x86_64/: master
flatpak/summaries/: afb0aa49fb58f3d4c53a0caecb8a4b8c36e5066f3f75b85bc5ac09f7534ed220-42a90c2f68c3e2f8c26a47a0dc2eefd5c30d46674aebef0fd51756907c0b5608.delta
packaging/: 50-xone-tray.rules  xone-tray.desktop
packaging/aur/: PKGBUILD
packaging/debian/: postinst
packaging/flatpak/: io.github.savagecore.XoneTray.yml
packaging/pacman/: PKGBUILD
pacman/: xone-tray-0.1.0-1-x86_64.pkg.tar.zst  xone-tray-debug-0.1.0-1-x86_64.pkg.tar.zst  xone-tray.db  xone-tray.db.tar.zst  xone-tray.files  xone-tray.files.tar.zst
src/: main.rs  xone.rs
